objects/OF_ServizioBillingElement__c.object
<CustomObject>
    <fields>
        <fullName>OF_AutoNumber__c</fullName>
        <displayFormat>SBE-{0000}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OF_BillingElementId__c</fullName>
        <formula>OF_BillingElement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingElementId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_BillingElementName__c</fullName>
        <formula>OF_BillingElement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing element name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_BillingElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing element</label>
        <referenceTo>OF_BillingElement__c</referenceTo>
        <relationshipLabel>Servizi Billing Elements</relationshipLabel>
        <relationshipName>Servizi_Billing_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CommercialElement__c</fullName>
        <formula>OF_BillingElement__r.OF_CommercialElement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial element</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Servizi_BillingElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_ServizioNome__c</fullName>
        <formula>OF_Servizio__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Servizio Nome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Servizio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servizio</label>
        <referenceTo>OF_Servizio__c</referenceTo>
        <relationshipLabel>Servizi Billing Elements</relationshipLabel>
        <relationshipName>Servizi_Billing_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Servizio Billing Element</label>
    <nameField>
        <label>Billing Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servizi Billing Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>